--- a/src/components/CoinInformation.css
+++ b/src/components/CoinInformation.css
@@ -2,23 +2,18 @@
   width: 100vw;
   display: "flex";
   flex-direction: column;
-  height: 80vh;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   padding: 10px;
-
+  height: fit-content;
   border-left: 2px solid darkgrey;
-}
-
-.chart {
-  height: 80vh;
-  width: "100%";
-  /* background-color: aqua; */
 }
 
 @media (max-width: 500px) {
   .containerChart {
-    width: "100vw";
+    border-left: none;
+    border-top: 2px solid darkgrey;
+    width: 100vw;
     margin-top: 0px;
     padding: 20px;
     padding-top: 0;
